Bug 415888 - No undo support for adding connected widgets
Summary: No undo support for adding connected widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 11:41 UTC by Ralf Habacker
Modified: 2020-01-05 12:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.1 (KDE Applications 19.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-05 11:41:32 UTC
Adding a connected widget by context menu could not be undone

STEPS TO REPRODUCE
1. start umbrello
2. add state diagram
3. add initial state
4. add connected state by context menu
5. undo adding connected state

OBSERVED RESULT
The connected state cannot be undone

EXPECTED RESULT
It should be possible to undo the connected state

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.45.0
Qt Version: 5.9.1
Comment 1 Ralf Habacker 2020-01-05 12:39:59 UTC
Git commit a6c4b6a8e647b366bb1eb417fcf86eb1906ee9bf by Ralf Habacker.
Committed on 05/01/2020 at 12:39.
Pushed by habacker into branch 'release/19.12'.

Fix 'No undo support for adding connected widgets'
FIXED-IN:2.30.1 (KDE Applications 19.12.1)

M  +8    -0    umbrello/umlwidgets/umlwidget.cpp
M  +9    -0    umbrello/umlwidgets/widgetbase.cpp
M  +1    -0    umbrello/umlwidgets/widgetbase.h

https://invent.kde.org/kde/umbrello/commit/a6c4b6a8e647b366bb1eb417fcf86eb1906ee9bf