Fix 'No undo support for adding connected widgets'

BUG:415888
FIXED-IN:2.30.1 (KDE Applications 19.12.1)